# EmbedATK

./: .gitmodules  CMakeLists.txt
include/EmbedATK/: EmbedATK.h
include/EmbedATK/Container/: Container.h  Map.h  Queue.h  Vector.h
include/EmbedATK/Core/: Assert.h  Bits.h  Concepts.h  Core.h  Logger.h
include/EmbedATK/Memory/: Any.h  Buffer.h  Container.h  Memory.h  Polymorphic.h  Pool.h  Store.h
include/EmbedATK/Network/: NetworkAdapter.h
include/EmbedATK/OSAL/: OSAL.h  osal_platform_std.h
include/EmbedATK/StateMachine/: State.h  StateMachine.h  StateTransition.h  SubstateGroup.h
include/EmbedATK/Utils/: MessageQueue.h  Thread.h  Timestamp.h
include/Mempp/: Concepts.h  Container.h  Memory.h  Mempp.h  Polymorphic.h  StateMachine.h
platform/arm/: STM32H753ZITX.cmake  toolchain.cmake
platform/arm/Network/: ArmNetworkAdapter.cpp  ArmNetworkAdapter.h
platform/arm/OSAL/: ArmOSAL.cpp  ArmOSAL.h
platform/arm/include/: nx_user.h  stm32h7xx_hal_conf.h  tx_user.h
platform/arm/include/OSAL/: osal_platform.h
platform/arm/network/: ArmNetworkAdapter.cpp  ArmNetworkAdapter.h
platform/arm/osal/: ArmOSAL.cpp  ArmOSAL.h
platform/arm/src/Network/: ArmNetworkAdapter.cpp
platform/arm/src/OSAL/: ArmOSAL.cpp  ArmOSAL.h
platform/common/OSAL/: StdOSAL.cpp  StdOSAL.h
platform/linux/Network/: LinuxNetworkAdapter.h
platform/linux/OSAL/: LinuxOSAL.cpp  LinuxOSAL.h
platform/linux/include/OSAL/: osal_platform.h
platform/linux/network/: LinuxNetworkAdapter.cpp
platform/linux/osal/: LinuxOSAL.h
platform/linux/src/Network/: LinuxNetworkAdapter.cpp
platform/linux/src/OSAL/: LinuxOSAL.cpp  LinuxOSAL.h
samples/: CMakeLists.txt  eatk_sample.cpp  mempp_sample.cpp  statemachine_sample.cpp
src/: pch.h
src/Core/: Logger.cpp
src/Network/: NetworkAdapter.cpp
src/OSAL/: OSAL.cpp  StdOSAL.cpp  StdOSAL.h
src/OSAL/common/: StdOSAL.h
tests/: CMakeLists.txt  containers_tests.h  eatk_tests.cpp  memory_tests.h  mempp_tests.cpp  polymorphic_tests.h  statemachine_tests.h
tests/Memory/: containers_tests.h  memory_tests.cpp  polymorphic_tests.h
tests/OSAL/: osal_tests.cpp
tests/StateMachine/: statemachine_tests.cpp
